--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MisariPanchal.github.io/ProductManagement-React",
+  "homepage": "https://MisariPanchal.github.io/SmootheCart",
   "name": "product-management-app",
   "version": "0.1.0",
   "private": true,
